--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,52 +6,20 @@ set(LIBRARY_OUTPUT_PATH lib/${CMAKE_BUILD_TYPE})
 find_package(Config++ REQUIRED)
 
 link_directories(/usr/lib/x86_64-linux-gnu/)
-include_directories(src/)
-include_directories(/usr/include/eigen2 ${CONFIG++_INCLUDE_DIR})
-
-set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -lconfig++")
+include_directories(src)
+include_directories(/usr/include/eigen3)
 
 file(GLOB src_files src/*)
+set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
-<<<<<<< HEAD
-add_library(oml_rf STATIC
-src/data.cpp
-src/utilities.cpp
-src/hyperparameters.cpp
-src/classifier.cpp
-src/online_rf.cpp)
-#target_link_libraries(oml_rf ${CONFIG++_LIBRARY})
-
-add_library(oml_mcboost STATIC
-src/data.cpp
-src/utilities.cpp
-src/hyperparameters.cpp
-src/classifier.cpp
-src/booster.cpp
-src/online_mcboost.cpp)
-#target_link_libraries(oml_mcboost ${CONFIG++_LIBRARY})
-
-
-add_library(oml_mclpboost STATIC
-src/data.cpp
-src/utilities.cpp
-src/hyperparameters.cpp
-src/classifier.cpp
-src/booster.cpp
-src/online_mclpboost.cpp)
-#target_link_libraries(oml_mclpboost ${CONFIG++_LIBRARY})
-
-
-set(ALL_LIB oml_rf oml_mcboost oml_mclpboost)
-=======
 add_library(oml_rf STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/online_rf.cpp)
 add_library(oml_experimenter STATIC src/data.cpp src/utilities.cpp src/classifier.cpp src/experimenter.cpp )
-add_library(oml_mcboost STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/booster.cpp src/online_mcboost.cpp )
-add_library(oml_larank STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/linear_larank/LaRank.cpp src/linear_larank/vectors.cpp src/linear_larank.cpp )
-add_library(oml_mclpboost STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/booster.cpp src/online_mclpboost.cpp )
->>>>>>> 6333f6cadc7840e1c5f17152cddd386940abe239
+#add_library(oml_mcboost STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/booster.cpp src/online_mcboost.cpp )
+#add_library(oml_larank STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/linear_larank/LaRank.cpp src/linear_larank/vectors.cpp src/linear_larank.cpp )
+#add_library(oml_mclpboost STATIC src/data.cpp src/utilities.cpp src/hyperparameters.cpp src/classifier.cpp src/booster.cpp src/online_mclpboost.cpp )
 
-set(ALL_LIB oml_rf oml_experimenter oml_mcboost oml_mclpboost oml_larank)
+set(ALL_LIB oml_rf oml_experimenter )
+#oml_mcboost oml_mclpboost oml_larank)
 
 install(DIRECTORY src/
   DESTINATION /usr/local/include/${PROJECT_NAME}
@@ -65,10 +33,6 @@ install(TARGETS ${ALL_LIB}
     ARCHIVE DESTINATION /usr/local/lib
     LIBRARY DESTINATION /usr/local/lib)
 
-add_executable(OMCBoost src/OMCBoost.cpp)
-target_link_libraries(OMCBoost ${ALL_LIB} config++)
-
-
-#add_library(online-machine-learning ${src_files})
-#target_link_libraries(online-multiclass-lpboost oml_booster oml_classifier oml_data oml_experimenter oml_hyperparameters oml_linear_larank oml_mcboost oml_mclpboost oml_rf oml_utilities lconfig++)
+#add_executable(OMCBoost src/OMCBoost.cpp)
+#target_link_libraries(OMCBoost ${ALL_LIB} config++)
 
